# cmds-book-architecture

./: .gitignore  CONTRACT.md  Makefile  README.md  docker-compose.local-prod.yml  docker-compose.yml
backend/: Dockerfile.prod  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_user_provider_keys.py  0003_section_page_range.py  0004_figures_and_figure_regenerations.py  0005_question_banks_and_questions.py  0006_question_linking.py  0007_question_metadata.py  0008_question_kind.py  0009_question_qc.py  0010_question_regenerations.py  0011_job_heartbeat.py  0012_question_review.py  0013_question_regen_params.py  0014_question_source_link.py  0015_figures_v2.py  0016_figure_approval.py  0017_figure_ref_placement.py  0018_figure_ref_hidden.py  0019_final_drafts.py  0020_widen_section_id_columns.py  0021_folders.py  0022_section_uuid_fks.py  0023_figure_refs_section_uuid.py  0024_per_stage_status.py  0025_schema_warnings.py  0026_extraction_orchestrator.py  0027_extraction_retry_counters.py  0028_schema_rebalance_columns.py  0029_reconciliation_columns.py  0030_figure_body_type.py  0031_final_draft_is_dirty.py  0032_figure_ref_body_target.py  0033_job_created_at.py
backend/app/: main.py
backend/app/api/: books.py  figures.py  final_draft.py  final_merge.py  folders.py  jobs.py  providers.py  qa.py  question_banks.py  question_regenerations.py  regenerations.py  sections.py
backend/app/core/: auth.py  claude_agent.py  claude_client.py  claude_mock.py  config.py  crypto.py  db.py  gemini_client.py  gemini_runtime.py  heartbeat.py  rate_limit.py  redis.py  storage.py  watchdog.py
backend/app/models/: __init__.py  book.py  figure.py  figure_reference.py  figure_regeneration.py  final_draft.py  folder.py  job.py  qa_run.py  question.py  question_bank.py  question_regeneration.py  regeneration.py  rejected_question.py  section.py  user_provider_key.py
backend/app/providers/: anthropic.py  base.py  gemini.py  google_vision.py  mathpix.py  router.py  sarvam.py
backend/app/schemas/: analyser.py  block.py  book.py  folder.py  job.py  qc.py  regen.py  section.py
backend/app/services/: analyser.py  backfill_section_uuids.py  block_normalizer.py  block_text.py  book_status.py  cancellation.py  chunk_builder.py  content_stream.py  docx_export.py  example_linker.py  figure_embedder.py  figure_extractor.py  figure_normalizer.py  figure_regenerator.py  figure_section_resolver.py  figure_serializer.py  final_draft.py  final_draft_export.py  final_merge.py  invariant_splitter.py  latex_normalize.py  latex_normalizer.py  latex_omml.py  pdf_layout_detector.py  pdf_preflight.py  prompt_loader.py  question_latex_normalizer.py  raw_extractor.py  recap_config.py  regenerator.py  schema_alignment.py  schema_builder.py  schema_cat_a_nesting.py  schema_content_type_normalizer.py  schema_correctors.py  schema_page_anchor.py  schema_page_sanitizer.py  schema_postpass.py  schema_puzzle_sanitizer.py  schema_validator.py  (+7 more)
backend/app/utils/: json_parse.py  sse.py
backend/app/workers/: celery_app.py  extract.py  figures_tasks.py  orchestrator.py  qa.py  question_regen_v3.py  questions.py  questions_v2.py  questions_v3.py  runner.py
backend/prompts/v1/: analyser.txt  extractor.txt  (+17 more)
backend/tests/: conftest.py  test_api_health.py  test_blocks.py  test_chunk_builder.py  test_invariant_split.py  test_json_parse.py  test_prompt_loader.py  test_qc_helpers.py  test_qc_local.py  test_regenerator.py  test_section_uuid_migration.py
(+159 files in other folders)
