[project]
name = "cmds-extraction-service"
version = "0.1.0"
description = "CMDS educational PDF extraction, QC, and regeneration service"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    # Database — SQLite async by default, Postgres via optional [postgres] extra
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # Anthropic
    "anthropic>=0.37.0",
    # Google Gemini — used for PDF schema generation (native PDF support)
    # PDF parsing — pymupdf is the primary (vision rendering + text);
    # pypdf/pdfplumber are fallbacks
    "pymupdf>=1.27.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    # Claude Agent SDK — "agent" mode (Claude Code OAuth, no API key needed)
    "claude-agent-sdk>=0.1.0",
    # HTTP
    "httpx>=0.27.0",
    # Security
    "cryptography>=43.0.0",
    # Utils
    "tenacity>=9.0.0",
    "python-json-logger>=2.0.7",
    "orjson>=3.10.0",
    "google-genai>=1.0.0",
    # Word (.docx) export — native builder for theory + questions + regen.
    # pypandoc is still in the tree for backward compat / future use but
    # the production exporters now use python-docx directly for fine
    # control over fonts, spacing, and the no-duplicate-headings rule.
    "python-docx>=1.0.0",
    "pypandoc-binary>=1.13",
    "latex2mathml>=3.81.0",
    "mathml2omml>=0.0.2",
    # LaTeX → rendered-Unicode normalization for figure anchor matching
    # (figure_normalizer.py). Used transitively by the theory, questions, and
    # figures stages — was imported in code but never declared here, so the
    # clean prod container build (pip install -e .) shipped WITHOUT it and
    # every post-schema stage crashed with ModuleNotFoundError: No module
    # named 'pylatexenc'. That was the root cause of "no book extracts in prod".
    "pylatexenc>=2.10",
    # SVG → PNG rasterization for embedding regenerated diagrams in Word.
    # Primary backend (needs system libcairo2 on Linux/prod). The resvg
    # standalone binary is the dependency-free fallback (see svg_raster.py).
    "cairosvg>=2.7.0",
    # Image crop / re-encode for composite-table figure regen (table_embed
    # engine in question_regen_v3.py crops each embedded graphic from the source
    # and normalizes the redrawn bytes to PNG). Present transitively via
    # cairosvg/pdfplumber, but declared explicitly since we import it directly.
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]
s3 = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
]
queue = [
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
]
gcp = [
    "google-cloud-vision>=3.7.0",
    "google-cloud-storage>=2.18.0",
]
full = [
    "cmds-extraction-service[postgres,s3,queue]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
